# ai-data-analyst

./: .env.example  .gitignore  AGENT.md  DATASET.md  Makefile  README.md  docker-compose.yml
api/: Dockerfile  agent.py  coach.py  conversation.py  db.py  insights.py  logs.md  main.py  prompts.py  pyproject.toml  schema.sql  tools_extra.py
api/agent/: __init__.py  core.py  prompts.py  tools.py
api/db/: __init__.py
api/eval/: golden.json  quick.json  report1.md  run.py
api/eval/reports/: report-initial.md  report-new.md  report-quick.md  report.md
docs/: AGENT.md  DATASET.md  assignment.md  plan.md  react-agent.md  structured-agent.md
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  api.ts  index.css
web/src/components/: Chart.tsx  Chat.tsx  InsightCard.tsx  RepCoach.tsx
web/src/lib/: sse.ts
