[project]
name = "synthio-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary,pool]>=3.2",
    "redis>=5.2",
    "langchain>=0.3.10",
    "langchain-openai>=0.2.11",
    "pydantic>=2.10",
    "pandas>=2.2",
    "numpy>=2.1",
]
